# poetry_demo

./: README.md  manage.py  pyproject.toml  requirements.txt
poetry_demo/: asgi.py  settings.py  urls.py  wsgi.py
